--- a/src/components/assets/styles/Services.css
+++ b/src/components/assets/styles/Services.css
@@ -2,24 +2,25 @@ Section.services {
   min-height: 100vh;
   background: linear-gradient(to top, #7a75c7, #a8a5f4);
 }
-.services {
-  margin-top: -25px;
-}
+
 .number {
   font-family: monospace;
   font-weight: 800;
   font-size: 36px;
   padding-top: 15px;
 }
+.number::after {
+  content: "+";
+  position: relative;
+  left: 100px;
+  bottom: 55px;
+}
+.number:first-child::after {
+  left: 127px;
+}
 .label {
   font-size: 30px;
   font-weight: 500;
-}
-.plus {
-  position: relative;
-  font-size: 32px;
-  bottom: 55px;
-  left: 125px;
 }
 
 .heading {
@@ -27,10 +28,10 @@ Section.services {
   font-weight: 800;
   text-align: center;
   margin-bottom: -150px;
-  margin-top: 10px;
+  margin-top: 20px;
 }
 .panel {
-  background: linear-gradient(to top, #444075, #6360be);
+  background: linear-gradient(to top, #48428e, #6360be);
   width: (100vw / 2);
   padding: 20px 20px;
   border-radius: 10px;
