--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .text {
-  font-size: 54px;
+  font-size: 3.5rem;
   font-weight: 600;
   text-align: center;
-  margin: 50px 0;
+  padding-top: 80px;
   letter-spacing: normal;
 }
